@@ -24,6 +24,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix mingw build issues
 	* increase max allowed outstanding piece requests from peers
 	* uTP performance improvement. only fast retransmit one packet at a time
 	* improve error message for 'file too short'
